--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <!--information données au navigateur-->
         <meta charset="utf-8" />
@@ -19,14 +19,8 @@
         <!-- beginning header -->
         <header class="main-header">
             <!--dans le header principal, il y aura le logo à gauche puis une liste pour le menu-->
-            <a href="index.html"><img src="image/logo/Reservia@3x.png" alt="logo Réservia" height="37"></a>
-           <!--- <nav>
-                <ul class="menu">
-                    <li><a href="#bigboxH" > Hébergements </a></li>
-                    <li><a href="#listeActivite" > Activités </a></li>
-                    <li><a class="bleuGras" href="#" > S'inscrire </a></li>
-                </ul> 
-            </nav> -->
+            <a href="index.html"><img src="image/logo/Reservia@3x.png" alt="logo Réservia" height="37" title="Retour à l'Accueil"></a>
+           
             <nav class="menu">
                 <div class="petitMenu">
                     <a href="#bigboxH" > Hébergements </a>
@@ -55,9 +49,9 @@
                     <input type="text" placeholder="Marseille, France" id="search"/>
                 </div>
                 <button class="styleBouton" type="button">
-                    <div class="RechercheTexte">
+                    <span div class="RechercheTexte">
                         Rechercher
-                    </div> 
+                    </span> 
                     <i class="fas fa-search"></i>
                 </button>
             </div>
@@ -103,7 +97,7 @@
                 <div class="box1">
                     <div class="detail">
                         <div class="vignetteImage">
-                            <img class="image" src="image/hebergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" />
+                            <img class="image" src="image/hebergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hébergement Marseille" />
                         </div>
                         <div class="texte">
                             <h3>Auberge la Cannebière</h3>
@@ -119,7 +113,7 @@
                     </div>
                     <div class="detail">
                         <div class="vignetteImage">
-                            <img class="image" src="image/hebergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="kleber" /> 
+                            <img class="image" src="image/hebergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hébergement Marseille kleber" /> 
                         </div>
                         <div class="texte">
                             <h3>Hotel du port</h3>
@@ -151,7 +145,7 @@
                     </div>
                     <div class="detail">
                         <div class="vignetteImage">                    
-                            <img class="image" src="image/hebergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg"> 
+                            <img class="image" src="image/hebergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hébergement Marseille"> 
                         </div>
                         <div class="texte">
                             <h3>Hotel de la mer</h3>
@@ -217,7 +211,7 @@
                 <!--la boite contenant les petites boites détails des Populaires-->
                 <div class="box2">
                     <div class="detailPopu">
-                        <img class="imagePopu" src="image/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                        <img class="imagePopu" src="image/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hébergement Marseille">
                         <div class="textePopu">
                             <h3>Hôtel le soleil du matin</h3>
                             <p>Nuit à partir de 128<span class="texteGras">€</span></p>
@@ -231,7 +225,7 @@
                         </div>
                     </div>
                     <div class="detailPopu">
-                        <img class="imagePopu" src="image/hebergements/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                        <img class="imagePopu" src="image/hebergements/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hébergement Marseille">
                         <div class="textePopu">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71<span class="texteGras">€</span></p>
@@ -245,7 +239,7 @@
                         </div>
                     </div>
                     <div class="detailPopu">
-                        <img class="imagePopu" src="image/hebergements/febrian-zakaria-sjvU0THccQA-unsplash.jpg"> 
+                        <img class="imagePopu" src="image/hebergements/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="textePopu">
                             <h3>Hôtel Tout bleu de Blanc</h3>
                             <p>Nuit à partir de 68<span class="texteGras">€</span></p>
@@ -273,7 +267,7 @@
             <div id="listeActivite">
                 <div> <!--une seule activite pas de classe specifique-->
                     <div class="detailActivite">
-                        <img class="imageActivite" src="image/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"> 
+                        <img class="imageActivite" src="image/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="texteActivite">
                             <h3>Vieux Port</h3>
                         </div>
@@ -282,14 +276,14 @@
                 </div>
                 <div class="deuxActivites">
                     <div class="detailActivite">
-                        <img class="imageActivite2" src="image/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg"> 
+                        <img class="imageActivite2" src="image/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="texteActivite">
                             <h3>Fort de Pomègues</h3>
                         </div>
 
                     </div>
                     <div class="detailActivite">
-                        <img class="imageActivite3" src="image/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"> 
+                        <img class="imageActivite3" src="image/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="texteActivite">
                             <h3>Iles du Frioul</h3>
                         </div>
@@ -299,7 +293,7 @@
                 </div>
                 <div> <!--une seule activite pas de classe specifique-->
                     <div class="detailActivite">
-                        <img class="imageActivite" src="image/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"> 
+                        <img class="imageActivite" src="image/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="texteActivite">
                             <h3>Parc National des Calanques</h3>
                         </div>
@@ -309,14 +303,14 @@
                 </div>
                 <div class="deuxActivites">
                     <div class="detailActivite">
-                        <img class="imageActivite2" src="image/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg"> 
+                        <img class="imageActivite2" src="image/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="texteActivite">
                             <h3>Notre-Dame-de-la-garde</h3>
                         </div>
 
                     </div>
                     <div class="detailActivite">
-                        <img class="imageActivite2" src="image/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg"> 
+                        <img class="imageActivite2" src="image/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="hébergement Marseille"> 
                         <div class="texteActivite">
                             <h3>Parc Longchamp</h3>
                         </div>
@@ -329,7 +323,7 @@
 
         <!-- A propos -->
         <footer class="boxFooter">
-            <!-- géré en liste plutot qu'en hx et liste car les libellés des "titres" ne sont pas des mots clés-->
+            <!-- géré en liste plutot qu'en h3 ou h4 et liste car les libellés des "titres" ne sont pas des mots clés-->
             <ul>
                 <li class="NoirPlus">  A propos </li>
                 <li><a href="#" class="Noir"> Fonctionnement du site </a></li>
