--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <input type="text" placeholder="Marseille, France" id="search"/>
                 </div>
                 <button class="styleBouton" type="button">
-                    <span div class="RechercheTexte">
+                    <span class="RechercheTexte">
                         Rechercher
                     </span> 
                     <i class="fas fa-search"></i>
